--- a/paesaggi.html
+++ b/paesaggi.html
@@ -35,7 +35,7 @@
             </button>
             
             <div class="main-image-container">
-                <img id="mainImage" src="img/paesaggi/paesaggio1.jpg" alt="Paesaggio 1">
+                <img id="mainImage" src="img/paesaggi/01.jpg" alt="Paesaggio 1">
             </div>
             
             <button class="nav-arrow next" onclick="changeImage(1)">
@@ -45,43 +45,43 @@
 
         <div class="thumbnails-container">
             <div class="thumbnail active" onclick="selectImage(0)">
-                <a href="#"><img src="img/paesaggi/paesaggio1.jpg" alt="Paesaggio 1"></a>
+                <a href="#"><img src="img/paesaggi/01.jpg" alt="Paesaggio 1"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(1)">
-                <a href="#"><img src="img/paesaggi/paesaggio2.jpg" alt="Paesaggio 2"></a>
+                <a href="#"><img src="img/paesaggi/02.jpg" alt="Paesaggio 2"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(2)">
-                <a href="#"><img src="img/paesaggi/paesaggio3.jpg" alt="Paesaggio 3"></a>
+                <a href="#"><img src="img/paesaggi/03.jpg" alt="Paesaggio 3"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(3)">
-                <a href="#"><img src="img/paesaggi/paesaggio4.jpg" alt="Paesaggio 4"></a>
+                <a href="#"><img src="img/paesaggi/04.jpg" alt="Paesaggio 4"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(4)">
-                <a href="#"><img src="img/paesaggi/paesaggio5.jpg" alt="Paesaggio 5"></a>
+                <a href="#"><img src="img/paesaggi/05.jpg" alt="Paesaggio 5"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(5)">
-                <a href="#"><img src="img/paesaggi/paesaggio6.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/06.jpg" alt="Paesaggio 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(6)">
-                <a href="#"><img src="img/paesaggi/paesaggio7.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/07.jpg" alt="Paesaggio 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(7)">
-                <a href="#"><img src="img/paesaggi/paesaggio8.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/08.jpg" alt="Paesaggio 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(8)">
-                <a href="#"><img src="img/paesaggi/paesaggio9.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/09.jpg" alt="Paesaggio 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(9)">
-                <a href="#"><img src="img/paesaggi/paesaggio10.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/10.jpg" alt="Paesaggio 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(10)">
-                <a href="#"><img src="img/paesaggi/paesaggio11.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/11.jpg" alt="Paesaggio 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(11)">
-                <a href="#"><img src="img/paesaggi/paesaggio12.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/12.jpg" alt="Paesaggio 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(12)">
-                <a href="#"><img src="img/paesaggi/paesaggio13.jpg" alt="Paesaggio 6"></a>
+                <a href="#"><img src="img/paesaggi/13.jpg" alt="Paesaggio 6"></a>
             </div>
         </div>
     </div>
@@ -89,19 +89,19 @@
     <script>
         // Array of images for Paesaggi
         const images = [
-            'img/paesaggi/paesaggio1.jpg',
-            'img/paesaggi/paesaggio2.jpg',
-            'img/paesaggi/paesaggio3.jpg',
-            'img/paesaggi/paesaggio4.jpg',
-            'img/paesaggi/paesaggio5.jpg',
-            'img/paesaggi/paesaggio6.jpg',
-            'img/paesaggi/paesaggio7.jpg',
-            'img/paesaggi/paesaggio8.jpg',
-            'img/paesaggi/paesaggio9.jpg',
-            'img/paesaggi/paesaggio10.jpg',
-            'img/paesaggi/paesaggio11.jpg',
-            'img/paesaggi/paesaggio12.jpg',
-            'img/paesaggi/paesaggio13.jpg'
+            'img/paesaggi/01.jpg',
+            'img/paesaggi/02.jpg',
+            'img/paesaggi/03.jpg',
+            'img/paesaggi/04.jpg',
+            'img/paesaggi/05.jpg',
+            'img/paesaggi/06.jpg',
+            'img/paesaggi/07.jpg',
+            'img/paesaggi/08.jpg',
+            'img/paesaggi/09.jpg',
+            'img/paesaggi/10.jpg',
+            'img/paesaggi/11.jpg',
+            'img/paesaggi/12.jpg',
+            'img/paesaggi/13.jpg'
         ];
 
         let currentIndex = 0;
