--- a/ritratti.html
+++ b/ritratti.html
@@ -35,7 +35,7 @@
             </button>
             
             <div class="main-image-container">
-                <img id="mainImage" src="img/ritratti/ritratto1.jpg" alt="Ritratto 1">
+                <img id="mainImage" src="img/ritratti/01.jpg" alt="Ritratto 1">
             </div>
             
             <button class="nav-arrow next" onclick="changeImage(1)">
@@ -45,67 +45,67 @@
 
         <div class="thumbnails-container">
             <div class="thumbnail active" onclick="selectImage(0)">
-                <a href="#"><img src="img/ritratti/ritratto1.jpg" alt="Ritratto 1"></a>
+                <a href="#"><img src="img/ritratti/01.jpg" alt="Ritratto 1"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(1)">
-                <a href="#"><img src="img/ritratti/ritratto2.jpg" alt="Ritratto 2"></a>
+                <a href="#"><img src="img/ritratti/02.jpg" alt="Ritratto 2"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(2)">
-                <a href="#"><img src="img/ritratti/ritratto3.jpg" alt="Ritratto 3"></a>
+                <a href="#"><img src="img/ritratti/03.jpg" alt="Ritratto 3"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(3)">
-                <a href="#"><img src="img/ritratti/ritratto4.jpg" alt="Ritratto 4"></a>
+                <a href="#"><img src="img/ritratti/04.jpg" alt="Ritratto 4"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(4)">
-                <a href="#"><img src="img/ritratti/ritratto5.jpg" alt="Ritratto 5"></a>
+                <a href="#"><img src="img/ritratti/05.jpg" alt="Ritratto 5"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(5)">
-                <a href="#"><img src="img/ritratti/ritratto6.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/06.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(6)">
-                <a href="#"><img src="img/ritratti/ritratto7.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/07.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(7)">
-                <a href="#"><img src="img/ritratti/ritratto8.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/08.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(8)">
-                <a href="#"><img src="img/ritratti/ritratto9.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/09.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(9)">
-                <a href="#"><img src="img/ritratti/ritratto10.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/10.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(10)">
-                <a href="#"><img src="img/ritratti/ritratto11.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/11.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(11)">
-                <a href="#"><img src="img/ritratti/ritratto12.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/12.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(12)">
-                <a href="#"><img src="img/ritratti/ritratto13.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/13.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(13)">
-                <a href="#"><img src="img/ritratti/ritratto14.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/14.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(14)">
-                <a href="#"><img src="img/ritratti/ritratto15.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/15.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(15)">
-                <a href="#"><img src="img/ritratti/ritratto16.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/16.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(16)">
-                <a href="#"><img src="img/ritratti/ritratto17.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/17.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(17)">
-                <a href="#"><img src="img/ritratti/ritratto18.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/18.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(18)">
-                <a href="#"><img src="img/ritratti/ritratto19.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/19.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(19)">
-                <a href="#"><img src="img/ritratti/ritratto20.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/20.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(20)">
-                <a href="#"><img src="img/ritratti/ritratto21.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/21.jpg" alt="Ritratto 6"></a>
             </div>
         </div>
     </div>
@@ -113,27 +113,27 @@
     <script>
         // Array of images for Mostra 2024
         const images = [
-            'img/ritratti/ritratto1.jpg',
-            'img/ritratti/ritratto2.jpg',
-            'img/ritratti/ritratto3.jpg',
-            'img/ritratti/ritratto4.jpg',
-            'img/ritratti/ritratto5.jpg',
-            'img/ritratti/ritratto6.jpg',
-            'img/ritratti/ritratto7.jpg',
-            'img/ritratti/ritratto8.jpg',
-            'img/ritratti/ritratto9.jpg',
-            'img/ritratti/ritratto10.jpg',
-            'img/ritratti/ritratto11.jpg',
-            'img/ritratti/ritratto12.jpg',
-            'img/ritratti/ritratto13.jpg',
-            'img/ritratti/ritratto14.jpg',
-            'img/ritratti/ritratto15.jpg',
-            'img/ritratti/ritratto16.jpg',
-            'img/ritratti/ritratto17.jpg',
-            'img/ritratti/ritratto18.jpg',
-            'img/ritratti/ritratto19.jpg',
-            'img/ritratti/ritratto20.jpg',
-            'img/ritratti/ritratto21.jpg'
+            'img/ritratti/01.jpg',
+            'img/ritratti/02.jpg',
+            'img/ritratti/03.jpg',
+            'img/ritratti/04.jpg',
+            'img/ritratti/05.jpg',
+            'img/ritratti/06.jpg',
+            'img/ritratti/07.jpg',
+            'img/ritratti/08.jpg',
+            'img/ritratti/09.jpg',
+            'img/ritratti/10.jpg',
+            'img/ritratti/11.jpg',
+            'img/ritratti/12.jpg',
+            'img/ritratti/13.jpg',
+            'img/ritratti/14.jpg',
+            'img/ritratti/15.jpg',
+            'img/ritratti/16.jpg',
+            'img/ritratti/17.jpg',
+            'img/ritratti/18.jpg',
+            'img/ritratti/19.jpg',
+            'img/ritratti/20.jpg',
+            'img/ritratti/21.jpg'
         ];
 
         let currentIndex = 0;
