--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 
     // Seleziona un'immagine casualmente
     const randomIndex1 = Math.floor(Math.random() * images1.length);
-    const randomImage1 = images1[randomIndex];
+    const randomImage1 = images1[randomIndex1];
 
     // Imposta l'immagine scelta nell'elemento <img>
     document.getElementById("randomImage1").src = randomImage1;
