Add slideshow and update portrait image paths
Introduced a crossfade slideshow for portrait images in index.html and casuale.html, using new images in img/ritratti/t01.jpg to t21.jpg. Updated ritratti.html to use the new image filenames, added diocane.html as a new page, and made related adjustments to scripts and markup for random image selection and improved presentation.

--- a/ritratti.html
+++ b/ritratti.html
@@ -45,67 +45,67 @@
 
         <div class="thumbnails-container">
             <div class="thumbnail active" onclick="selectImage(0)">
-                <a href="#"><img src="img/ritratti/01.jpg" alt="Ritratto 1"></a>
+                <a href="#"><img src="img/ritratti/t01.jpg" alt="Ritratto 1"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(1)">
-                <a href="#"><img src="img/ritratti/02.jpg" alt="Ritratto 2"></a>
+                <a href="#"><img src="img/ritratti/t02.jpg" alt="Ritratto 2"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(2)">
-                <a href="#"><img src="img/ritratti/03.jpg" alt="Ritratto 3"></a>
+                <a href="#"><img src="img/ritratti/t03.jpg" alt="Ritratto 3"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(3)">
-                <a href="#"><img src="img/ritratti/04.jpg" alt="Ritratto 4"></a>
+                <a href="#"><img src="img/ritratti/t04.jpg" alt="Ritratto 4"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(4)">
-                <a href="#"><img src="img/ritratti/05.jpg" alt="Ritratto 5"></a>
+                <a href="#"><img src="img/ritratti/t05.jpg" alt="Ritratto 5"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(5)">
-                <a href="#"><img src="img/ritratti/06.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t06.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(6)">
-                <a href="#"><img src="img/ritratti/07.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t07.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(7)">
-                <a href="#"><img src="img/ritratti/08.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t08.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(8)">
-                <a href="#"><img src="img/ritratti/09.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t09.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(9)">
-                <a href="#"><img src="img/ritratti/10.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t10.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(10)">
-                <a href="#"><img src="img/ritratti/11.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t11.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(11)">
-                <a href="#"><img src="img/ritratti/12.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t12.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(12)">
-                <a href="#"><img src="img/ritratti/13.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t13.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(13)">
-                <a href="#"><img src="img/ritratti/14.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t14.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(14)">
-                <a href="#"><img src="img/ritratti/15.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t15.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(15)">
-                <a href="#"><img src="img/ritratti/16.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t16.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(16)">
-                <a href="#"><img src="img/ritratti/17.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t17.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(17)">
-                <a href="#"><img src="img/ritratti/18.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t18.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(18)">
-                <a href="#"><img src="img/ritratti/19.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t19.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(19)">
-                <a href="#"><img src="img/ritratti/20.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t20.jpg" alt="Ritratto 6"></a>
             </div>
             <div class="thumbnail" onclick="selectImage(20)">
-                <a href="#"><img src="img/ritratti/21.jpg" alt="Ritratto 6"></a>
+                <a href="#"><img src="img/ritratti/t21.jpg" alt="Ritratto 6"></a>
             </div>
         </div>
     </div>
