--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/png" href="favicon.png">
     <title>Matteo Mattielli - Fotografo</title>
     
-    <link rel="stylesheet" href="prova.css">
+    <link rel="stylesheet" href="index.css">
 
     <style>
         :root {
@@ -152,7 +153,7 @@
         <img src="img/facebook.webp" width="25" style="vertical-align: middle;"> Facebook: <a href="https://www.facebook.com/profile.php?id=61572285960295" target="_blank">Matteo Mattielli</a></p>
     </section>
 
-    <script src="prova.js"></script>
+    <script src="index.js"></script>
 
 </body>
 </html>
