--- a/index copy.html
+++ b/index copy.html
@@ -47,8 +47,7 @@
         <div class="logo">
             <a href="#">MATTEO MATTIELLI</a>
         </div>
-        <button class="menu-toggle" aria-label="Toggle navigation">&#9776;</button>
-        <ul class="menu" id="main-menu">
+        <ul class="menu">
             <li class="dropdown">
                 <a href="#lavori">Lavori</a>
                 <ul class="dropdown-menu">
