Improve gallery layout and add new exhibition
Refactored CSS for better responsive gallery layouts, ensuring proper centering and column stacking on mobile. Added the 'Assis I.A.' exhibition to the Mostre section in index.html, including navigation and preview image. Cleaned up redundant styles and improved consistency between desktop and mobile views.

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
             <li class="dropdown">
                 <a href="#mostre">Mostre</a>
                 <ul class="dropdown-menu">
+                    <li><a href="mostra2025.html">Assis-I.A.</a></li>
                     <li><a href="mostra2024.html">Tutte giù da terra</a></li>
                     <li><a href="mostra2023.html">Da 100 a 0</a></li>
                 </ul>
@@ -130,10 +131,19 @@
     </section>
 
     <section id="mostre">
-        <h2>Mostre</h2>
-        <p>In questa sezione pubblicherò le mostre fotografiche che ho realizzato nel tempo.</p>
-        
-        <div class="mostre-gallery-wrapper">
+    <h2>Mostre</h2>
+    <p>In questa sezione pubblicherò le mostre fotografiche che ho realizzato nel tempo.</p>
+
+    <div class="mostre-gallery-wrapper">
+
+        <div id="assisia" class="exhibition-subsection">
+            <h3>Assis I.A.</h3>
+            <div class="exhibition-grid">
+                <a href="assisia.html" class="exhibition-item">
+                    <img src="img/mostra_assisia/preview.jpg" alt="Assis I.A. Preview"> 
+                </a>
+            </div>
+        </div>
 
         <div id="mostra2024" class="exhibition-subsection">
             <h3>Tutte giù da terra</h3>
@@ -149,11 +159,13 @@
             <div class="exhibition-grid">
                 <a href="mostra2023.html" class="exhibition-item">
                     <img src="img/mostra2023/mostra2023-1.jpg" alt="Mostra 2023 - 1">
-                  </a>
+                </a>
             </div>
         </div>
-        </div>
-    </section>
+
+    </div>
+</section>
+
 
     <section id="varie">
         <h2>Varie</h2>
@@ -182,8 +194,8 @@
                 </a>
             </div>
         </div>
-        </div>
-    </section>
+        
+    </div></section>
 
     <section id="progetti">
         <h2>Progetti Futuri</h2>
